# gitbackup

./: .gitignore  Dockerfile  config.py  flake.nix  gh.py  git.py  host.py  host_loader.py  loop.py  main.py  oneshot.py  pyproject.toml  signals.py
.github/workflows/: publish.yml
gitbackup/: config.py  gh.py  git.py  host.py  host_loader.py  loop.py  main.py  oneshot.py  signals.py  single.py
